test/apps/basics/src/routes/errors/load-error-string-server.svelte
<script context="module">
	export async function load() {
		return { status: 555, error: 'Not found' };
	}
</script>
